# gstreamer-virtualdev

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: 32bit.cmake  defaults.cmake  helper.cmake
src/: local-debug.h  main.cpp
src/camera/: CMakeLists.txt  shared-memory-queue.c  virtualcam.c  virtualcam.h
src/camera/cmake/: libdshowcapture.cmake
src/camera/virtualcam-module/: CMakeLists.txt  virtualcam-install.bat.in  virtualcam-module.cpp  virtualcam-uninstall.bat.in
src/camera/virtualcam-module/cmake/: 32bit.cmake  helper.cmake
src/camera/virtualcam-module/cmake/windows/: virtualcam-module32.def
